kubernetes/clusters/home-k3s/apps/forgejo/forgejo/app/httproute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-anubis
spec:
  selector:
    app.kubernetes.io/name: forgejo
  ports:
    - name: http
      port: 8923
      targetPort: 8923
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - "forge.${DOMAIN}"
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: forgejo-anubis
          port: 8923
