kubernetes/clusters/home-k3s/apps/forgejo/forgejo/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: ssh
  rules:
    - backendRefs:
        - name: forgejo-ssh
          port: 22
